# foxes

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  =2024.6.1  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  history.md  paper.md  pip.freeze  pkg_info.txt  pyproject.toml  requirements.txt  requirements_py3_12.txt  requirements_py3_13.txt  setup.cfg  setup.py  windIO
.github/: draft-pdf.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code_checks.yml  deploy-docs.yml  deploy.yml  deploy_docs.yml  draft-pdf.yml  on-pull-request.yml  on-push.yml  on-push_PCTfiles.yml  publish.yml  publish_conda.yml  publish_pypi.yml  publish_testpypi.yml  pypi.yml  python-package.yml  run_sphinx.yml  run_tests.yml  test.yml  test_and_publish_pypi.yml  test_pypi.yml
Luuk/: Tuning.ipynb  test.ipynb
conda/: build_env.yaml  conda_build_config.yaml  meta.yaml
dev/: dev_probes.py  dev_row.py
dev/scratch/: data_book.py  dev_probes.py  dev_row.py  read_data.py  turbine_order.py
dev/scripts/: create_simple_nc.py  split_nc.py
docs/: Makefile  conf.py  requirements.txt
docs/source/: acknowledgements.md  api.rst  api_algorithms.rst  api_algorithms_downwind.rst  api_algorithms_iterative.rst  api_algorithms_sequential.rst  api_config.rst  api_constants.rst  api_core.rst  api_data.rst  api_engines.rst  api_foxes.rst  api_input.rst  api_models.rst  api_opt.rst  api_opt_problems.rst  api_opt_problems_geom.rst  api_output.rst  api_utils.rst  api_utils_abl.rst  api_variables.rst  api_wake_models.rst  apps.md  citation.md  conf.py  examples.rst  history.md  history.rst  index.rst  inputs.rst  installation.md  installation.rst  models.rst  optimization.md  overview.md  parameter_files.md  testing.md
examples/: run_all.py
examples/abl_states/: README.md  run.py  states.csv
examples/compare_rotors/: run.py
examples/compare_rotors_pwakes/: run.py
examples/compare_wakes/: README.md  run.py
examples/direct_mdata_infusion/: README.md  inputs.yaml
examples/dyn_wakes/: run.py
examples/field_data_nc/: README.md  run.py
examples/foxes/: run_all.py
examples/icon_dream/: README.md  run.py
examples/induction/: run.py
examples/induction_RHB/: run.py
examples/multi_height/: run.py
examples/parameter_study/: README.md  run.py
examples/point_cloud/: README.md  inputs.yaml
examples/power_mask/: README.md  power_mask.csv  run.py  states.csv
examples/quickstart/: README.md  run.py
examples/random_timeseries/: run.py
examples/scan_row/: README.md  run.py
examples/sector_management/: README.md  run.py  sector_rules.csv
examples/sequential/: run.py
examples/sequential_yawcontroller/: README.md  run.py
examples/single_state/: README.md  run.py
examples/single_state_row/: README.md  run.py
examples/states_lookup_table/: README.md  curtail_to_power.csv  run.py
examples/streamline_wakes/: README.md  run.py
examples/tab_file/: run.py
examples/timelines/: run.py
examples/timeseries/: README.md  run.py  timeseries.csv
examples/timeseries_slurm/: README.md  clean.sh  run.py
examples/weibull_cloud/: README.md  inputs.yaml
examples/weibull_grid/: README.md  inputs.yaml
examples/weibull_sectors/: README.md  inputs.yaml  weibull_sectors_12.nc
examples/wind_rose/: run.py
examples/windio/: README.md  run.py  windio_5turbines_timeseries.yaml  windio_inputs.yaml
examples/yaml_input/: README.md  inputs.yaml  inputs2.yaml
examples/yawed_wake/: run.py
foxes/: VERSION  __init__.py  constants.py  variables.py
foxes/algorithms/: __init__.py
foxes/config/: __init__.py  conf.py  config.py
foxes/core/: __init__.py  algorithm.py  axial_induction_model.py  data.py  data_calc_model.py  engine.py  farm_controller.py  farm_data.py  farm_data_model.py  farm_data_model_list.py  farm_model.py  ground_model.py  induction_model.py  model.py  partial_wakes_model.py  point_data.py  point_data_model.py  point_data_model_list.py  rotor_model.py  runner.py  states.py  turbine.py  turbine_model.py  turbine_order.py  turbine_type.py  vertical_profile.py  wake_deflection.py  wake_frame.py  wake_model.py  wake_superposition.py  wind_farm.py
foxes/data/: __init__.py  parse.py  read_data.py  static_data.py  test_farm_67.csv
foxes/engines/: __init__.py  dask.py  default.py  futures.py  mpi.py  multiprocess.py  multiprocessing.py  numpy.py  pool.py  ray.py  single.py  single_chunk.py
foxes/input/: __init__.py
foxes/interfaces/: __init__.py
foxes/models/: __init__.py  model_book.py
foxes/opt/: __init__.py
foxes/output/: __init__.py  animation.py  calc_points.py  cluster_eval.py  farm_layout.py  farm_results_eval.py  farms_eval.py  flow_plot_2d.py  flow_plots_2d.py  grids.py  multiple_farms.py  output.py  plt.py  results_writer.py  rose_plot.py  rotor_point_plots.py  round.py  slice_data.py  slices_data.py  state_turbine_map.py  state_turbine_table.py  turbine_type_curves.py
foxes/tools/: __init__.py  data_book.py  dict.py  helpers.py  pandas_file_helper.py  static_files.py  two_circles.py  wind_dir.py
foxes/utils/: __init__.py  cubic_roots.py  data_book.py  dev_utils.py  dict.py  download.py  era5_utils.py  eval_python.py  exec_python.py  factory.py  geojson_utils.py  geopandas_helpers.py  geopandas_utils.py  load.py  pandas.py  pandas_helpers.py  pandas_utils.py  plotly.py  plotly_helpers.py  random_xy.py  regularize.py  runners.py  subclasses.py  tab_files.py  ti_utils.py  two_circles.py  utm_utils.py  weibull.py  wind_dir.py  windfarmer_utils.py  (+3 more)
notebooks/: blockage.ipynb  blockage_comparison.ipynb  blockage_farm.ipynb  data.ipynb  dyn_wakes.ipynb  engines.ipynb  examples.ipynb  heterogeneous.ipynb  icon_dream.ipynb  layout_opt.ipynb  model_book.ipynb  multi_height.ipynb  operating_flag.ipynb  overview.ipynb  parallelization.ipynb  partial_wakes.ipynb  power_mask.ipynb  rotor_models.ipynb  sector_man.ipynb  sequential.ipynb  single_row.ipynb  timelines.ipynb  timeseries.ipynb  tuning.ipynb  turbine_data.ipynb  wind_rose.ipynb  yawed_wake.ipynb
paper/: paper.bib  paper.md
tests/: =2.4.2  run_tests.py
(+1608 files in other folders)
