# pyproject.toml file specified at the root of the directory

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foxes"
version = "1.5"
authors = [
  {name = "Jonas Schulte"},
]
maintainers = [
  {name = "Jonas Schulte"}
]
description = "Farm Optimization and eXtended yield Evaluation Software"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wind farm", "Wake modelling", "Wind farm optimization"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.10"
dependencies = [
    "cycler>=0.10",
    "h5netcdf>=1",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2",
    "pyyaml>=4",
    "scipy>=1.12",
    "tqdm>=2",
    "xarray>=2023",
]

[project.optional-dependencies]
opt = [
    "foxes-opt>=0.5"
]
dask = [
    "dask>=2022",
    "distributed>=2022",
    "dask-jobqueue>=0.8",
    "setuptools>=61",
]
doc = [
    "setuptools>=61",
    "sphinx>=5",
    "sphinx-immaterial>=0.10",
    "nbsphinx>=0.5",
    "ipykernel>=5",
    "ipywidgets>=5",
    "m2r2>=0.2",
    "lxml_html_clean>=0.4",
    "dask>=2022",
    "distributed>=2022",
]

[project.urls]
Homepage = "https://github.com/FraunhoferIWES/foxes"
Documentation = "https://fraunhoferiwes.github.io/foxes.docs/index.html"
Repository = "https://github.com/FraunhoferIWES/foxes.git"
"Bug Tracker" = "https://github.com/FraunhoferIWES/foxes/issues"
Changelog = "https://github.com/FraunhoferIWES/foxes/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["notebooks", "examples", "tests", "docs"]

[project.scripts]
foxes_yaml = "foxes.input.yaml.yaml:foxes_yaml"
foxes_windio = "foxes.input.yaml.windio.windio:foxes_windio"
