# pyproject.toml file specified at the root of the directory

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
name = "foxes"
version = "1.6.3"
authors = [
  {name = "Jonas Schulte"},
]
maintainers = [
  {name = "Jonas Schulte"}
]
description = "Farm Optimization and eXtended yield Evaluation Software"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wind farm", "Wake modelling", "Wind farm optimization"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.12",
    "xarray>=2023",
    "netcdf4>=1.0",
    #"h5netcdf>=1.0",
    "pyyaml>=4.0",
    "tqdm>=2.0",
    "utm>=0.5",
]

[project.optional-dependencies]
opt = [
    "foxes-opt>=0.6"
]
dask = [
    "dask>=2022.0",
    "distributed>=2022.0",
    "dask-jobqueue>=0.8",
    "setuptools>=61.0",
]
doc = [
    "setuptools>=61.0",
    "sphinx>=5.0",
    "sphinx-immaterial>=0.10",
    "myst-nb>=0.1",
    "ipykernel>=5.0",
    "ipywidgets>=5.0",
    "m2r2>=0.2",
    "lxml_html_clean>=0.4",
    "dask>=2022.0",
    "distributed>=2022.0",
    "ipywidgets>0.1",
]
test = [
    "flake8>=0.1",
    "pytest>=7.0",
]
dev = [
    "pre-commit>=0.1",
    "objsize>=0.5",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/FraunhoferIWES/foxes"
Documentation = "https://fraunhoferiwes.github.io/foxes.docs/index.html"
Repository = "https://github.com/FraunhoferIWES/foxes.git"
"Bug Tracker" = "https://github.com/FraunhoferIWES/foxes/issues"
Changelog = "https://github.com/FraunhoferIWES/foxes/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["notebooks", "examples", "tests", "docs"]

[project.scripts]
foxes_yaml = "foxes.input.yaml.yaml:foxes_yaml"
foxes_windio = "foxes.input.yaml.windio.windio:foxes_windio"
