# pyproject.toml file specified at the root of the directory

[project]
name = "foxes"
version = "1.7.7"
authors = [
  {name = "Jonas Schulte"},
]
maintainers = [
  {name = "Jonas Schulte"}
]
description = "Farm Optimization and eXtended yield Evaluation Software"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wind farm", "Wake modelling", "Wind farm optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.12",
    "xarray>=2023",
    "netcdf4>=1.5",
    #"h5netcdf>=1.0",
    "pyyaml>=4.0",
    "tqdm>=4.31.1",
    "utm>=0.5",
]

[project.optional-dependencies]
opt = [
    "foxes-opt>=0.7"
]
icon_dream = [
    "cdo>=0.1",
    "requests>0.1",
]
era5 = [
    "metpy>=0.1",
]
dask = [
    "dask>=2022.0",
    "distributed>=2022.0",
    "dask-jobqueue>=0.8",
    "setuptools>=61.0",
]
doc = [
    "setuptools>=61.0",
    "sphinx>=5.0",
    "sphinx-immaterial>=0.10",
    "myst-nb>=0.1",
    "ipykernel>=5.0",
    "ipywidgets>=5.0",
    "m2r2>=0.2",
    "lxml_html_clean>=0.4",
    "dask>=2022.0",
    "distributed>=2022.0",
]
test = [
    "pytest>=7.0",
    "nbmake>1.0",
    "dask>=2022.0",
    "distributed>=2022.0",
]
dev = [
    "pre-commit>=0.1",
    "objsize>=0.5",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/FraunhoferIWES/foxes"
Documentation = "https://fraunhoferiwes.github.io/foxes"
Repository = "https://github.com/FraunhoferIWES/foxes.git"
"Bug Tracker" = "https://github.com/FraunhoferIWES/foxes/issues"
Changelog = "https://github.com/FraunhoferIWES/foxes/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project.scripts]
foxes_yaml = "foxes.input.yaml.yaml:main"
foxes_windio = "foxes.input.yaml.windio.windio:main"
foxes_create_mean_dataset = "foxes.input.states.create.dataset_mean:main"
wrf2foxes = "foxes.input.states.create.wrf2foxes:main"
era52foxes = "foxes.input.states.create.era52foxes:main"
iconDream2foxes = "foxes.input.states.create.icon_dream:main"
eww2foxes = "foxes.input.farm_layout.from_eww:main"
