[metadata]
name         = foxes 
version      = file: foxes/VERSION
author       = Fraunhofer IWES
author_email = jonas.schulte@iwes.fraunhofer.de
description  = Farm Optimization and eXtended yield Evaluation Software
keywords     = Wind farm, Wake modelling, Wind farm optimization
license      = MIT

long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Source Code = https://github.com/FraunhoferIWES/foxes
    Bug Tracker = https://github.com/FraunhoferIWES/foxes/issues
    Documentation = https://fraunhoferiwes.github.io/foxes.docs/index.html

classifiers =
    Topic :: Scientific/Engineering
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
zip_safe = True
include_package_data = True
package_dir =
packages = find:
python_requires = 
    >=3.8

install_requires =
    matplotlib
    numpy
    pandas
    xarray
    dask
    distributed
    scipy
    netcdf4
    windrose
    pyarrow

[options.extras_require]
io = 
    windio>=1
opt =
    foxes-opt
    pymoo>=0.6
test =
    flake8
    pytest
doc = 
    sphinx 
    sphinx-immaterial
    nbsphinx
    ipykernel
    ipywidgets
    m2r2
    lxml_html_clean
all = 
    windio>=1
    flake8
    pytest
    foxes-opt
    pymoo>=0.6
    sphinx 
    sphinx-immaterial
    nbsphinx
    ipykernel
    ipywidgets
    m2r2
    lxml_html_clean
    
scripts =
